# closet-muse

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: app.py  db.py  generate_image.py  models.py  settings.py  types.py
frontend/: api_utils.py  app.py  utils.py
frontend/views/: clo_ai.py  generate_outfit.py  onboard_wardrobe.py
supabase/: config.toml
